# midas

./: .gitignore  README.md
midas-app/: app.json  package.json
midas-app/app/: _layout.tsx  index.tsx
midas-app/app/(tabs)/: _layout.tsx  expenses.tsx  index.tsx
midas-app/app/auth/: callback.tsx  login.tsx
midas-app/components/: PieChart.tsx
midas-app/constants/: categories.ts  colors.ts  config.ts
midas-app/hooks/: useAuth.ts  useExpenses.ts
midas-app/services/: api.ts  auth.service.ts  expenses.service.ts  transactions.service.ts
midas-app/store/: auth.store.ts
midas-app/types/: auth.ts  expense.ts  transaction.ts
midas-server/: .env.example  main.py  midas.db  pyproject.toml
midas-server/app/: __init__.py  config.py
midas-server/app/api/v1/endpoints/: auth.py  email.py  expenses.py  health.py
midas-server/app/auth/: __init__.py  oauth.py  routes.py  schemas.py
midas-server/app/core/: logging.py  security.py
midas-server/app/database/: base.py
midas-server/app/email/: __init__.py  email_parser.py  gmail_client.py  routes.py  schemas.py
midas-server/app/expenses/: __init__.py  categorizer.py  expense_extractor.py  repository.py  routes.py  schemas.py
midas-server/app/llm/: client.py  prompts.py
midas-server/db/: README.md  init_sqlite.py  midas.sqlite3  schema.sql
midas-server/scripts/: sync_emails.py
