[project]
name = "midas-server"
version = "0.1.0"
description = "Backend server for Midas - AI-powered expense tracking from Gmail"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "google-api-python-client>=2.100",
    "openai>=1.0",
    "python-dotenv>=1.0",
    "python-jose[cryptography]>=3.3",
    "email-validator>=2.0",
    "authlib>=1.7.2",
    "httpx>=0.28.1",
]

[tool.poetry.dev-dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.21"
httpx = "^0.24"
